tests/baselines/reference/checkJsdocSatisfiesTag13.errors.txt
/a.js(5,14): error TS1360: Type '{ g: string; }' does not satisfy the expected type '{ f: (x: string) => string; }'.
  Object literal may only specify known properties, and 'g' does not exist in type '{ f: (x: string) => string; }'.


==== /a.js (1 errors) ====
    /** @satisfies {{ f: (x: string) => string }} */
    const t1 = { f: s => s.toLowerCase() }; // should work
    
    /** @satisfies {{ f: (x: string) => string }} */
    const t2 = { g: "oops" }; // should error
                 ~~~~~~~~~
!!! error TS1360: Type '{ g: string; }' does not satisfy the expected type '{ f: (x: string) => string; }'.
!!! error TS1360:   Object literal may only specify known properties, and 'g' does not exist in type '{ f: (x: string) => string; }'.
    